<resources>
    <string name="smoothsetup_wizard_title_loading">Loading …</string>
    <string name="smoothsetup_wizard_title_login">Log in</string>
    <string name="smoothsetup_wizard_title_provider_login">%s</string>
    <string name="smoothsync_manual_setup">Manual Setup</string>
    <string name="smoothsetup_wizard_title_choose_provider">Choose Provider</string>
    <string name="smoothsetup_wizard_title_enter_password">Enter password</string>
    <string name="smoothsetup_wizard_title_authenticating">Authenticating …</string>
    <string name="smoothsetup_wizard_title_completing_setup">Finishing …</string>
    <string name="smoothsetup_wizard_title_setup_completed">Congratulations</string>
    <string name="smoothsetup_wizard_title_error">Error</string>
    <string name="smoothsetup_wizard_title_authentication_error">Authentication Error</string>
    <plurals name="smoothsetup_wizard_title_grant_permissions">
        <item quantity="one">Grant permission</item>
        <item quantity="two">Grant permissions</item>
        <item quantity="few">Grant permissions</item>
        <item quantity="many">Grant permissions</item>
        <item quantity="other">Grant permissions</item>
    </plurals>
    <string name="smoothsetup_prompt_login">Enter your email address or login and choose your provider</string>
    <string name="smoothsetup_enter_your_provider_data">Enter your provider data</string>
    <string name="smoothsetup_prompt_login_at_provider">Enter your %1$s login</string>
    <string name="smoothsetup_prompt_enter_password">Enter your %1$s password</string>
    <string name="smoothsetup_prompt_enter_password_or_app_specific_password">Enter your %1$s password or your app-specific %1$s password</string>
    <string name="smoothsetup_prompt_enter_app_specific_password">Enter your app-specific %1$s password</string>
    <plurals name="smoothsetup_prompt_grant_permission">
        <item quantity="one">Please grant the following permission</item>
        <item quantity="two">Please grant the following permissions</item>
        <item quantity="few">Please grant the following permissions</item>
        <item quantity="many">Please grant the following permissions</item>
        <item quantity="other">Please grant the following permissions</item>
    </plurals>
    <string name="smoothsetup_button_choose_provider">Choose provider</string>
    <string name="smoothsetup_button_manual_setup">Manual setup</string>
    <string name="smoothsetup_button_other_provider">Other</string>
    <string name="smoothsetup_button_login_next">Next</string>
    <string name="smoothsetup_button_sign_in">Sign in</string>
    <string name="smoothsetup_button_retry_now">Retry</string>
    <string name="smoothsetup_button_grant_permission">Grant</string>
    <string name="smoothsetup_button_close">Close</string>
    <string name="smoothsetup_message_setup_completed">%1$s is now set up and synchronization will start shortly</string>
    <string name="smoothsetup_message_auth_completed">%1$s has successfully validated your account and synchronization will continue shortly</string>
    <string name="smoothsetup_message_please_wait">This can take a moment.</string>
    <string name="smoothsetup_message_authentication_failure">%1$s could not authenticate your account \"%2$s\" with %3$s.\n\nPlease sign in to authorize %1$s to sync your account.</string>
    <string name="smoothsetup_error_load_provider">Couldn\'t load provider data.\n\nPlease check your internet connection or retry later.</string>
    <string name="smoothsetup_error_authentication">Authentication failed.\n\nPlease verify your password and retry.</string>
    <string name="smoothsetup_error_network">Connection failed.\n\nPlease check your internet connection or retry later.</string>
    <string name="smoothsetup_error_other">Unknown Error: "%s"</string>
    <string name="smoothsetup_error_unknown_host">Host not found.</string>
    <string name="smoothsetup_error_invalid_url">Please enter a valid hostname or https URL.</string>
    <string name="smoothsetup_error_insecure_scheme">Please use the https scheme.</string>
    <string name="smoothsetup_default_login_hint">Email address or login</string>
    <string name="smoothsetup_hostname_or_address">Hostname or address</string>
    <string name="smoothsetup_manual_login_hint">Username</string>
    <string name="smoothsetup_hint_password">Password</string>
    <string name="smoothsetup_sign_up_now">No account yet? <b>Sign up now.</b></string>
    <string name="smoothsetup_forgot_password">Forgot your password?</string>
    <string name="smoothsetup_create_app_specific_password">Create app-specific password</string>
    <string name="smoothsetup_privacy_policy">%1$s Privacy Policy</string>
    <string name="smoothsetup_terms_and_conditions">%1$s Terms and Conditions</string>
    <string name="smoothsetup_button_copy_app_specific_password">Copy</string>
    <string name="smoothsetup_snackbar_found_app_specific_password">App-specific password found: %1$s</string>
    <string name="smoothsetup_app_specific_password_inserted">App-specific password inserted</string>
    <string name="smoothsetup_title_allow_alarms">Allow Alarms</string>
    <string name="smoothsetup_prompt_allow_alarms">Please allow Alarms, so %1$s can notify you when tasks are due.</string>
</resources>