<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp">


    <TextView
            android:id="@android:id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginStart="36dp"
            android:padding="12dp"
            android:text="@string/smoothsetup_prompt_enter_password"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginStart="48dp"
            android:hint="@string/smoothsetup_hint_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:passwordToggleDrawable="@drawable/ic_show_password_indicator"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@android:id/input"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword">

            <requestFocus/>
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginStart="48dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/smoothsetup_button_sign_in"/>


    <TextView
            android:id="@+id/smoothsetup_forgot_password"
            android:layout_width="match_parent"
            android:layout_marginEnd="36dp"
            android:layout_marginLeft="36dp"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:layout_marginRight="36dp"
            android:layout_marginStart="36dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/accent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/smoothsetup_forgot_password"/>


    <TextView
            android:id="@+id/smoothsetup_create_app_specific_password"
            android:layout_width="match_parent"
            android:layout_marginEnd="36dp"
            android:layout_marginLeft="36dp"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:layout_marginRight="36dp"
            android:layout_marginStart="36dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/accent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/smoothsetup_create_app_specific_password"/>
</LinearLayout>