<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp">


    <TextView
            android:id="@android:id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:padding="12dp"
            android:text="@string/smoothsetup_enter_your_provider_data" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/uri_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/smoothsetup_hostname_or_address">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/url_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textUri"
                android:padding="12dp">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/smoothsetup_manual_login_hint"
            app:helperText=""
            app:helperTextEnabled="true">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="12dp">

        </androidx.appcompat.widget.AppCompatAutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/smoothsetup_hint_password"
            app:passwordToggleDrawable="@drawable/ic_show_password_indicator"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="12dp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            android:gravity="center"
            android:text="@string/smoothsetup_button_sign_in"
            android:textAllCaps="false" />

</LinearLayout>